--- a/test.html
+++ b/test.html
@@ -148,50 +148,228 @@
         // 题库数据
         const questionBank = [
             {
-                id: 1,
-                question: "毛泽东思想形成的时代条件是（ ）",
-                options: [
-                    "A. 中国沦为半殖民地半封建社会",
-                    "B. 十月革命开辟的世界无产阶级革命新时代",
-                    "C. 第一次世界大战的爆发",
-                    "D. 中国工人阶级的成长壮大"
-                ],
-                correctAnswer: "B"
-            },
-            {
-                id: 2,
-                question: "在中国共产党的历史上第一次提出毛泽东思想这个概念的是（ ）",
-                options: [
-                    "A. 刘少奇",
-                    "B. 朱德",
-                    "C. 邓小平",
-                    "D. 王稼祥"
-                ],
-                correctAnswer: "D"
-            },
-            {
-                id: 3,
-                question: "中国工人阶级以独立的姿态登上政治舞台是在（ ）",
-                options: [
-                    "A. 辛亥革命中",
-                    "B. 新文化运动中",
-                    "C. 五四运动中",
-                    "D. 国民革命运动中"
-                ],
-                correctAnswer: "C"
-            },
-            {
-                id: 4,
-                question: "中国共产党人第一篇反对教条主义的重要文献是（ ）",
-                options: [
-                    "A. 《中国的红色政权为什么能够存在？》",
-                    "B. 《井冈山的斗争》",
-                    "C. 《星星之火，可以燎原》",
-                    "D. 《反对本木主义》"
-                ],
-                correctAnswer: "D"
-            }
-        ];
+"id": 1,
+"question": "毛泽东建军思想的核心是（）",
+"options": [
+"A. 枪指挥党",
+"B. 坚持党对军队的绝对领导",
+"C. 以少胜多，以弱胜强",
+"D. 集中优势兵力，各个歼灭敌人"
+],
+"correctAnswer": "B"
+},
+{
+"id": 2,
+"question": "集中概括毛泽东思想的是（）",
+"options": [
+"A. 毛泽东的诗词",
+"B. 毛泽东的言论",
+"C. 毛泽东晚年的实践",
+"D. 毛泽东的科学著作"
+],
+"correctAnswer": "D"
+},
+{
+"id": 3,
+"question": "最能体现毛泽东哲学思想的著作有（）。①《矛盾论》②《实践论》③《论联合政府》④《新民主主义论》",
+"options": [
+"A. ①②",
+"B. ①④",
+"C. ②③",
+"D. ③④"
+],
+"correctAnswer": "A"
+},
+{
+"id": 4,
+"question": "我们一切路线、方针、政策的制定仍应牢牢立足（）这个最大实际，充分体现其必然要求",
+"options": [
+"A. 主要矛盾",
+"B. 基本国情",
+"C. 社会性质",
+"D. 根本制度"
+],
+"correctAnswer": "B"
+},
+{
+"id": 5,
+"question": "下列选项中，属于抗日战争时期中国共产党在敌后抗日根据地实行的土地政策的是（）",
+"options": [
+"A. 没收地主土地分配给农民",
+"B. 保持原有的土地状态",
+"C. 没收一切土地平均分配",
+"D. 减租减息"
+],
+"correctAnswer": "D"
+},
+{
+"id": 6,
+"question": "近代中国半殖民地半封建社会的最基本的国情是（）",
+"options": [
+"A. 特殊的过渡性的社会形态",
+"B. 受帝国主义列强共同支配的半殖民地社会",
+"C. 有了一定程度资本主义成分的半封建社会",
+"D. 经济、政治和社会发展的极端不平衡"
+],
+"correctAnswer": "D"
+},
+{
+"id": 7,
+"question": "解决物质利益、分配方面的人民内部矛盾要（）",
+"options": [
+"A. 说服教育、讨论的方法",
+"B. 实行统筹兼顾、适当安排",
+"C. 用民主的方法",
+"D. 实行 “百花齐放、百家争鸣”",
+"E. 实行平等、团结、互助的方针"
+],
+"correctAnswer": "B"
+},
+{
+"id": 8,
+"question": "1927 年 9 月 29 日至 10 月 3 日，毛泽东在江西省永新县三湾村，领导了举世闻名的（），是建设无产阶级领导的新型人民军队的开端",
+"options": [
+"A. 三湾改编",
+"B. 古田会议",
+"C. 抗美援朝战争",
+"D. 淮海战役"
+],
+"correctAnswer": "A"
+},
+{
+"id": 9,
+"question": "坚持实事求是的具体做法不包括（）",
+"options": [
+"A. 坚持从我国基本国情出发来制定一切路线、方针、政策",
+"B. 超越现实、超越阶段而急于求成",
+"C. 坚决纠正因循守旧、故步自封的观念和做法",
+"D. 牢牢立足基本国情这个最大实际"
+],
+"correctAnswer": "B"
+},
+{
+"id": 10,
+"question": "随着苏联解体、东欧剧变，冷战结束，世界开始走向多极化。然而，（）作为唯一的超级大国，仍然极力使世界向单极化方向发展，谋求建立以其为领导的世界秩序",
+"options": [
+"A. 俄罗斯",
+"B. 美国",
+"C. 法国",
+"D. 日本"
+],
+"correctAnswer": "B"
+},
+        
+    {
+        "id": 11,
+        "question": "标志着解放区在农民土地问题上，开始由削弱封建剥削向变革封建土地关系、废除封建剥削过渡的文件是（）",
+        "options": [
+            "A. 井冈山土地法",
+            "B. 兴国土地法",
+            "C. 中国土地法大纲",
+            "D. 关于清算、减租及土地问题的指示"
+        ],
+        "correctAnswer": "D"
+    },
+    {
+        "id": 12,
+        "question": "土地革命战争后期和抗日战争时期，毛泽东思想得到系统总结和全面展开而达到成熟，其成熟的主要标志是（）",
+        "options": [
+            "A. 毛泽东同志在党的领导地位的确立",
+            "B. 党的理论素养的加强",
+            "C. 新民主主义革命理论的系统阐述",
+            "D. 党的思想路线的端正"
+        ],
+        "correctAnswer": "C"
+    },
+    {
+        "id": 13,
+        "question": "毛泽东在党的六届六中全会上，借用我国传统文化中的“（）”命题，来提倡马克思主义同中国实际相结合的科学态度",
+        "options": [
+            "A. 郑人买履",
+            "B. 夜郎自大",
+            "C. 实事求是",
+            "D. 闭门造车"
+        ],
+        "correctAnswer": "C"
+    },
+    {
+        "id": 14,
+        "question": "党在过渡时期的总路线被概括为（）",
+        "options": [
+            "A. “四清五反”",
+            "B. “一化三改”",
+            "C. “两个转变”",
+            "D. “一个中心，两个基本点”"
+        ],
+        "correctAnswer": "B"
+    },
+    {
+        "id": 15,
+        "question": "毛泽东指出，对于建设社会主义的规律的认识，必须有一个过程，必须（），从没有经验到有经验，从有较少经验，到有较多的经验，从建设社会主义这个未被认识的必然王国，到逐步地克服盲目性、认识客观规律，从而获得自由，在认识上出现一个飞跃，到达自由王国",
+        "options": [
+            "A. 从解放思想出发",
+            "B. 从实践出发",
+            "C. 从经验出发",
+            "D. 从理论出发"
+        ],
+        "correctAnswer": "B"
+    },
+    {
+        "id": 16,
+        "question": "中国革命有一个中心问题，同时也是新民主主义革命理论的核心问题，这一问题是（）",
+        "options": [
+            "A. 农民问题",
+            "B. 分清敌友的问题",
+            "C. 无产阶级的领导权问题",
+            "D. 资产阶级的领导权问题"
+        ],
+        "correctAnswer": "C"
+    },
+    {
+        "id": 17,
+        "question": "改革开放初期，对毛泽东和毛泽东思想做出实事求是评价的党的重要决议是（）",
+        "options": [
+            "A. 《党的若干历史问题的决议》",
+            "B. 《关于建国以来党的若干历史问题的决议》",
+            "C. 《论联合政府》",
+            "D. 《新民主主义论》"
+        ],
+        "correctAnswer": "B"
+    },
+    {
+        "id": 18,
+        "question": "自苏联解体以来，以（ ）为首的霸权主义和强权政治持续盛行，给世界带来了极大的不安定因素。在这一背景下，恐怖主义活动日益猖獗，对全球安全构成严重威胁。同时，一些区域性的冲突和争端此起彼伏，使得国际局势更加错综复杂。这些不稳定因素相互交织，加剧了全球的安全挑战",
+        "options": [
+            "A. 美国",
+            "B. 德国",
+            "C. 英国",
+            "D. 印度"
+        ],
+        "correctAnswer": "A"
+    },
+    {
+        "id": 19,
+        "question": "邓小平理论是对毛泽东思想的（）",
+        "options": [
+            "A. 纠正和继承",
+            "B. 批判和发展",
+            "C. 继承和发展",
+            "D. 否定和创新"
+        ],
+        "correctAnswer": "C"
+    },
+    {
+        "id": 20,
+        "question": "我国社会主义农业改造中，党对富农的政策是（）",
+        "options": [
+            "A. 联合",
+            "B. 改造",
+            "C. 团结",
+            "D. 限制到消灭"
+        ],
+        "correctAnswer": "D"
+    }
+] ;
 
         // DOM元素
         const questionElement = document.getElementById('question');
